2007-08-10  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/gui.stetic, MonoDevelop.Gettext.addin.xml,
	  MonoDevelop.Gettext.mdp, Makefile.am,
	  MonoDevelop.Gettext/MakefileHandler.cs, templates/Makefile.am.template,
	  templates/Makefile.template: Added support for makefile generation.

2007-08-09  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.addin.xml: Changed addin path.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Gettext/GettextFeatureWidget.cs: Workaround to mcs bug.

2007-08-09  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.Gettext.GettextFeatureWidget.cs,
	  gtk-gui/MonoDevelop.Gettext.Translator.LanguageChooserDialog.cs,
	  MonoDevelop.Gettext/GettextFeature.cs,
	  MonoDevelop.Gettext/GettextFeatureWidget.cs: Fixed 82340: Gettext
	  addin: translation project creation should be available as a
	  'project feature'.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Gettext.addin.xml: Removed the CommandService class.
	  Everything is done directly with CommandManager. Moved all extension
	  node types to MD.Components.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.Gettext.POEditorWidget.cs,
	  gtk-gui/MonoDevelop.Gettext.Translator.LanguageChooserDialog.cs,
	  gtk-gui/MonoDevelop.Gettext.TranslationProjectOptionsDialog.cs,
	  gtk-gui/gui.stetic, MonoDevelop.Gettext.addin.xml,
	  MonoDevelop.Gettext.mdp, Makefile.am: Reorganized the extension point
	  hierarchy. Embedded all add-in manifests as resources.

2007-08-09  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.addin.xml,
	  MonoDevelop.Gettext.NodeBuilders/TranslationProjectNodeBuilder.cs,
	  MonoDevelop.Gettext/PropertyProvider.cs,
	  MonoDevelop.Gettext/TranslationProject.cs: Fixed bug 82334: Gettext
	  addin: can't choose which files to translate. It's now possible to
	  choose, if a file can be translated in the file properties. 

2007-08-09  Mike Krüger <mkrueger@novell.com> 
